# ShiftLib

./: .clang-format  CMakeLists.txt  CMakeSettings.json  README.md  cpp.hint
benchmarks/: XSBenchConfig.h
benchmarks/Memory/: XSMemoryBench.cpp
cmake/: ShiftLibConfig.cmake.in
include/ShiftLib/: XSArchitecture.hpp  XSBit.hpp  XSBit.inl  XSCompiler.h  XSConfig.h  XSConfig.hpp  XSExpected.hpp  XSInt128.hpp  XSInt128.inl  XSLimits.hpp  XSMath.hpp  XSMath.inl  XSRational.hpp  XSRational.inl  XSTimer.hpp  XSTraits.hpp  XSTraits.inl  XSUInt128.hpp  XSUInt128.inl  XSUtility.hpp
include/ShiftLib/Geometry/: XSAABoundingBox.hpp  XSAABoundingBox.inl  XSAABoundingBox2.hpp  XSAABoundingBox2.inl  XSAABoundingBox4.hpp  XSAABoundingBox4.inl  XSMatrix3x3.hpp  XSMatrix3x3.inl  XSMatrix3x4.hpp  XSMatrix4x3.hpp  XSMatrix4x3.inl  XSMatrix4x4.hpp  XSMatrix4x4.inl  XSPoint3D.hpp  XSPoint3D.inl  XSPoint3D2.hpp  XSPoint3D2.inl  XSPoint3D4.hpp  XSPoint3D4.inl  XSQuaternion.hpp  XSQuaternion.inl  XSRange.hpp  XSRange.inl  XSRange2.hpp  XSRange2.inl  XSRange4.hpp  XSRange4.inl  XSRay.hpp  XSRay.inl  XSRay2.hpp  XSRay2.inl  XSRay4.hpp  XSRay4.inl  XSTransform.hpp  XSTransform.inl  XSVector3D.hpp  XSVector3D.inl  XSVector3D2.hpp  XSVector3D2.inl  XSVector3D4.hpp  (+1 more)
include/ShiftLib/Memory/: XSAllocatorHeap.hpp  XSAllocatorStack.hpp  XSArray.hpp  XSArrayView.hpp  XSDArray.hpp  XSDArray.inl  XSIterator.hpp  XSIteratorOffset.hpp  XSMemory.hpp  XSPArray.hpp  XSSArray.hpp  XSSort.hpp  XSSortPartition.hpp  XSStaticArray.hpp  XSString.hpp  XSStringView.hpp
include/ShiftLib/SIMD/: XSSIMD12.hpp  XSSIMD12.inl  XSSIMD16.hpp  XSSIMD16.inl  XSSIMD2.hpp  XSSIMD2.inl  XSSIMD3.hpp  XSSIMD3.inl  XSSIMD3x2.hpp  XSSIMD3x2.inl  XSSIMD3x3.hpp  XSSIMD3x3.inl  XSSIMD3x4.hpp  XSSIMD3x4.inl  XSSIMD4.hpp  XSSIMD4.inl  XSSIMD6.hpp  XSSIMD6.inl  XSSIMD8.hpp  XSSIMD8.inl  XSSIMDBase.hpp  XSSIMDBase.inl  XSSIMDBool.hpp  XSSIMDBool.inl  XSSIMDData.hpp  XSSIMDData.inl  XSSIMDInBase.hpp  XSSIMDInBase.inl  XSSIMDMath.hpp  XSSIMDTraits.hpp  XSSIMDTraits.inl  XSSIMDTypes.hpp  XSSIMDTypes.inl  XSSIMDx86.hpp  XSSIMDx86Functions.hpp
tests/: XSBitTest.cpp  XSCompilerOptions.h  XSGTest.hpp  XSInt128Test.cpp  XSMathTest.cpp  XSRationalTest.cpp  XSSIMD12Test.cpp  XSSIMD16Test.cpp  XSSIMD2Test.cpp  XSSIMD3Test.cpp  XSSIMD3x2Test.cpp  XSSIMD3x3Test.cpp  XSSIMD3x4Test.cpp  XSSIMD4Test.cpp  XSSIMD6Test.cpp  XSSIMD8Test.cpp  XSSIMDBaseTest.cpp  XSSIMDBoolTest.cpp  XSSIMDInBaseTest.cpp  XSSIMDTraitsTest.cpp  XSTraitsTest.cpp  XSTypes.hpp  XSUInt128Test.cpp
tests/Geometry/: XSAABoundingBox2Test.cpp  XSAABoundingBox4Test.cpp  XSAABoundingBoxTest.cpp  XSGTestGeometry.hpp  XSMatrix3x3Test.cpp  XSMatrix3x4Test.cpp  XSMatrix4x3Test.cpp  XSMatrix4x4Test.cpp  XSPoint3D2Test.cpp  XSPoint3D4Test.cpp  XSPoint3DTest.cpp  XSQuaternionTest.cpp  XSRange2Test.cpp  XSRange4Test.cpp  XSRangeTest.cpp  XSRay2Test.cpp  XSRay4Test.cpp  XSRayTest.cpp  XSTypesGeometry.hpp  XSVector3D2Test.cpp  XSVector3D4Test.cpp  XSVector3DTest.cpp
tests/Memory/: XSArrayTest.cpp  XSDArrayTest.cpp  XSMemoryTest.cpp  XSPArrayTest.cpp  XSSArrayTest.cpp  XSSortPartitionTest.cpp  XSSortTest.cpp  XSStringTest.cpp
tests/SIMD/: XSGTestSIMD.hpp  XSSIMD12Test.cpp  XSSIMD16Test.cpp  XSSIMD2Test.cpp  XSSIMD3Test.cpp  XSSIMD3x2Test.cpp  XSSIMD3x3Test.cpp  XSSIMD3x4Test.cpp  XSSIMD4Test.cpp  XSSIMD6Test.cpp  XSSIMD8Test.cpp  XSSIMDBaseTest.cpp  XSSIMDBoolTest.cpp  XSSIMDInBaseTest.cpp  XSSIMDTraitsTest.cpp  XSTypesSIMD.hpp
